--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@types/node": "^22.13.5",
     "typescript": "^5.7.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SurajsinhSolanki/generate-sample-env.git"
+  }
 }
 
